# Kernel_internal

./: CMakeLists.txt  README.md  create_build.sh
src/ipc/: message_queue_example.c  pipe_example.c  shared_memory_example.c
src/process/: fork_example.c
src/signals/: signal_example.c
src/sync/: mutex_example.c  producer_consumer.c  semaphore_example.c
src/threads/: thread_example.c
